src/objects/FieloPLT__BadgeMember__c.object
<CustomObject>
    <description>Badges obtained by each Member.</description>
    <fields>
        <fullName>FieloPLT__Badge__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Badge granted to a Member.</description>
        <inlineHelpText>Badge granted to a Member.</inlineHelpText>
        <label>Badge</label>
        <referenceTo>FieloPLT__Badge__c</referenceTo>
        <relationshipLabel>Badge Members</relationshipLabel>
        <relationshipName>BadgesMembers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Member__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Member who obtained a Badge.</description>
        <inlineHelpText>Member who obtained a Badge.</inlineHelpText>
        <label>Member</label>
        <referenceTo>FieloPLT__Member__c</referenceTo>
        <relationshipLabel>Badge Members</relationshipLabel>
        <relationshipName>BadgesMembers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Quantity__c</fullName>
        <description>Number of Badges granted to a Member.</description>
        <inlineHelpText>Number of Badges granted to a Member.</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Transaction that generated the Badge for the Member.</description>
        <inlineHelpText>Transaction that generated the Badge for the Member.</inlineHelpText>
        <label>Transaction</label>
        <referenceTo>FieloPLT__Transaction__c</referenceTo>
        <relationshipLabel>Badges Members</relationshipLabel>
        <relationshipName>BadgesMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Badge Member</label>
    <nameField>
        <label>BadgeMember Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Badges Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloPLT__ProgramConsistency</fullName>
        <active>true</active>
        <description>The Segment belongs to other Program. Create the Segment in this Program to use it.</description>
        <errorConditionFormula>FieloPLT__Member__r.FieloPLT__Program__c &lt;&gt; FieloPLT__Badge__r.FieloPLT__Program__c</errorConditionFormula>
        <errorMessage>The Badge belongs to other Program. Create the Badge in this Program to use it.</errorMessage>
    </validationRules>
</CustomObject>